Feature/improved preference gui (#20)
merge preference improvements